# actix-web-rust-microservice

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: app.rs  config.rs  lib.rs  logging.rs  main.rs  state.rs
src/clients/: http_client.rs
src/common/: error.rs  mod.rs  request_id.rs  response.rs
src/events/: publisher.rs
src/modules/: health.rs  mod.rs  root.rs
src/modules/items/: dto.rs  handlers.rs  mod.rs  model.rs  repository.rs  service.rs
src/workers/: example_worker.rs  mod.rs
tests/: api_test.rs
