[package]
name = "actix-web-microservice-boilerplate"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Production-ready Actix Web microservice boilerplate"
license = "MIT OR Apache-2.0"

[dependencies]
actix-cors = "0.7"
actix-web = "4.13"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
